--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                     <input type="radio" id="not" name="read" class="read" value="Unfinished" required>
                 </fieldset>
                 <label for="rating">Rating:</label>
-                <input type="number" id="rating" name="rating" class="rating" value="--" min="0" max="10">
+                <input type="number" id="rating" name="rating" class="rating" placeholder="--" min="0" max="10">
+                <span>/10</span>
                 <input type="submit" value="Submit" class="submitBtn">
             </form>
         </div>
@@ -41,7 +42,7 @@
                         <th>Author</th>
                         <th>Pages</th>
                         <th class="columnRead">Read</th>
-                        <th>Rating</th>
+                        <th class="columnRating">Rating</th>
                     </tr>
                 </thead>
                 <tbody class="tableBody">
