Add 'required text' css + functions

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
                     <div class="form-div1">
                         <div>
                             <label for="bookName">Name:</label>
-                            <input type="text" id="bookName" name="name" class="bookName" value="Kay" required> 
+                            <input type="text" id="bookName" name="name" class="bookName"  required> 
                         </div>
                         <div>
                             <label for="author">Author:</label>
-                            <input type="text" id="author" name="author" class="author" value="Zed"  required>
+                            <input type="text" id="author" name="author" class="author"   required>
                         </div>
                         <div>
                             <label for="pages">Pages:</label>
-                            <input type="number" id="pages" name="pages" class="pages" value="100" min="1" required>
+                            <input type="number" id="pages" name="pages" class="pages"  min="1" required>
                         </div>
                     </div>
                     <div class="form-div2">
@@ -47,6 +47,7 @@
                         </div>
                         
                         <input type="submit" value="Submit" class="submitBtn">
+                        <div class="requiredText">* Please fill out all required fields *</div>
                     </div>
                 </form>
             </div>
